Kubernetes/Backend/Backend-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Backend-Deployment
  labels:
    app: python-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-backend
  template:
    metadata:
      labels:
        app: python-backend
    spec:
      containers:
      - name: python-backend
        image: asia-south1-docker.pkg.dev/project-37db7793-2542-41f6-9f9/dental-repo/backend:latest
        ports:
        - containerPort: 8080
