Kubernetes/Backend/Backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Backend-Deployment-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-backend-service
            port: 
              number: 80
